# advent-of-code-2024

./: .gitignore  .gitmodules  Cargo.toml  README.md  new_day.sh
src/: lib.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
src/day_09/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs
src/day_xx/: mod.rs
