[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = []

[profile.release]
debug = true

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
indoc = "2.0.1"
fxhash = "0.2.1"
ring-algorithm = "0.7.0"
regex = "1.11.1"
# slab = "0.4.8"
# rayon = "1.7.0"
# regex = "1.8.1"
# lazy_static = "1.4.0"
