[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = []

[profile.release]
debug = true

[dependencies]
itertools = "0.13.0"
fxhash = "0.2.1"
gcd = "2.3.0"
winnow = "0.5"

[dev-dependencies]
indoc = "2.0.1"
